--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,7 @@
   justify-content: center;
 }
 
-button.compare {
+button.action {
   width: 10rem;
   margin-top: 2rem;
 }
@@ -29,6 +29,15 @@ input[type="file"] {
 }
 
 img, canvas {
+  border: 2px solid black;
   width: 400px;
   height: 400px;
+}
+
+canvas.result-one {
+  border: 4px solid blue;
+}
+
+canvas.result-two {
+  border: 4px solid red;
 }
